5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4464/executions/1734_2504.log
== TEST (2019-05-11 14:46:03) 
-- CODE:
QiC = int(input("copias do virus no sangue de Micaleteia: ")) 
QiL = int(input("insira a quantidade de leuzinhos no sangue: "))
percentualV = float(input("insira o percy da multi de virus diario: "))
percentualL = float(input("insira o percy da multi de leuzinho diarios"))

while (QiL < 2*QiC):
	
-- ERROR:
File "XXXX", line 8
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 14:49:19) 
-- CODE:
QiC = int(input("copias do virus no sangue de Micaleteia: ")) 
QiL = int(input("insira a quantidade de leuzinhos no sangue: "))
percentualV = float(input("insira o percy da multi de virus diario: "))
percentualL = float(input("insira o percy da multi de leuzinho diarios"))

V = 0.0
L = 0.0
D = 1
while (QiL < 2*QiC):
	V = QiC + (QiC*percentualV/100)
	L = QiL + (Qic*percentualL/100)
	D = D + 1
print(D)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    L = QiL + (Qic*percentualL/100)
NameError: name 'Qic' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 14:50:01) 
-- CODE:
QiC = int(input("copias do virus no sangue de Micaleteia: ")) 
QiL = int(input("insira a quantidade de leuzinhos no sangue: "))
percentualV = float(input("insira o percy da multi de virus diario: "))
percentualL = float(input("insira o percy da multi de leuzinho diarios"))

V = 0.0
L = 0.0
D = 1
while (QiL < 2*QiC):
	V = QiC + (QiC*percentualV/100)
	L = QiL + (QiL*percentualL/100)
	D = D + 1
print(D)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    L = QiL + (Qic*percentualL/100)
NameError: name 'Qic' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 14:50:47) 
-- CODE:
QiC = int(input("copias do virus no sangue de Micaleteia: ")) 
QiL = int(input("insira a quantidade de leuzinhos no sangue: "))
percentualV = float(input("insira o percy da multi de virus diario: "))
percentualL = float(input("insira o percy da multi de leuzinho diarios"))

V = 0.0
L = 0.0
D = 1
while (L < 2*V):
	V = QiC + (QiC*percentualV/100)
	L = QiL + (QiL*percentualL/100)
	D = D + 1
print(D)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 14:52:12) 
-- CODE:
QiC = int(input("copias do virus no sangue de Micaleteia: ")) 
QiL = int(input("insira a quantidade de leuzinhos no sangue: "))
percentualV = float(input("insira o percy da multi de virus diario: "))
percentualL = float(input("insira o percy da multi de leuzinho diarios"))

V = 0.0
L = 0.0
D = 1
while (L < (2*QiC):
	V = QiC + (QiC*percentualV/100)
	L = QiL + (QiL*percentualL/100)
	D = D + 1
print(D)
-- ERROR:
File "XXXX", line 9
    while (L < (2*QiC):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 14:53:20) 
-- CODE:
QiC = int(input("copias do virus no sangue de Micaleteia: ")) 
QiL = int(input("insira a quantidade de leuzinhos no sangue: "))
percentualV = float(input("insira o percy da multi de virus diario: "))
percentualL = float(input("insira o percy da multi de leuzinho diarios"))

V = 0.0
L = 0.0
D = 1

while (L < QiC*2):
	V = QiC + (QiC*percentualV/100)
	L = QiL + (QiL*percentualL/100)
	D = D + 1
print(D)
-- ERROR:
File "XXXX", line 9
    while (L < (2*QiC):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 15:20:51) 
-- CODE:
QiV = int(input("copias do virus no sangue de Micaleteia: ")) 
QiL = int(input("insira a quantidade de leuzinhos no sangue: "))
percentualV = float(input("insira o percy da multi de virus diario: "))
percentualL = float(input("insira o percy da multi de leuzinho diarios"))

V = QiV
L = QiL
dias = 0

while (L < 2*V):
	V = V + ((QiC*percentualV)/100)
	L = V + ((QiL*percentualL)/100)
	dias = dias + 1
print(cont)
-- EXECUTION TIME:
0.112336
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1734/2504/main.py", line 11, in <module>
    V = V + ((QiC*percentualV)/100)
NameError: name 'QiC' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 15:20:59) 
-- CODE:
QiV = int(input("copias do virus no sangue de Micaleteia: ")) 
QiL = int(input("insira a quantidade de leuzinhos no sangue: "))
percentualV = float(input("insira o percy da multi de virus diario: "))
percentualL = float(input("insira o percy da multi de leuzinho diarios"))

V = QiV
L = QiL
dias = 0

while (L < 2*V):
	V = V + ((QiC*percentualV)/100)
	L = V + ((QiL*percentualL)/100)
	dias = dias + 1
print(dias)
-- EXECUTION TIME:
0.119769
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1734/2504/main.py", line 11, in <module>
    V = V + ((QiC*percentualV)/100)
NameError: name 'QiC' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 15:21:03) 
-- CODE:
QiV = int(input("copias do virus no sangue de Micaleteia: ")) 
QiL = int(input("insira a quantidade de leuzinhos no sangue: "))
percentualV = float(input("insira o percy da multi de virus diario: "))
percentualL = float(input("insira o percy da multi de leuzinho diarios"))

V = QiV
L = QiL
dias = 0

while (L < 2*V):
	V = V + ((QiC*percentualV)/100)
	L = V + ((QiL*percentualL)/100)
	dias = dias + 1
print(dias)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    V = V + ((QiC*percentualV)/100)
NameError: name 'QiC' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 15:21:53) 
-- CODE:
QiV = int(input("copias do virus no sangue de Micaleteia: ")) 
QiL = int(input("insira a quantidade de leuzinhos no sangue: "))
percentualV = float(input("insira o percy da multi de virus diario: "))
percentualL = float(input("insira o percy da multi de leuzinho diarios"))

V = QiV
L = QiL
dias = 0

while (L < 2*V):
	V = V + ((V*percentualV)/100)
	L = L + ((L*percentualL)/100)
	dias = dias + 1
print(dias)
-- OUTPUT:
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 15:22:08) 
-- CODE:
QiV = int(input("copias do virus no sangue de Micaleteia: ")) 
QiL = int(input("insira a quantidade de leuzinhos no sangue: "))
percentualV = float(input("insira o percy da multi de virus diario: "))
percentualL = float(input("insira o percy da multi de leuzinho diarios"))

V = QiV
L = QiL
dias = 0

while (L < 2*V):
	V = V + ((V*percentualV)/100)
	L = L + ((L*percentualL)/100)
	dias = dias + 1
print(dias)
-- EXECUTION TIME:
0.178635
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
9
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
5
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:
17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
